@@ -16,14 +16,17 @@
 package io.airlift.discovery.client;
 
 import com.google.inject.Guice;
+import com.google.inject.Inject;
 import com.google.inject.Injector;
 import com.google.inject.Key;
+import com.google.inject.Provider;
 import com.google.inject.TypeLiteral;
 import io.airlift.discovery.client.testing.TestingDiscoveryModule;
 import org.testng.annotations.Test;
 
 import java.net.URI;
 import java.util.Set;
+import java.util.UUID;
 
 import static com.google.common.collect.MoreCollectors.onlyElement;
 import static io.airlift.discovery.client.DiscoveryBinder.discoveryBinder;
@@ -142,6 +145,38 @@ public class TestHttpAnnouncementBinder
         assertAnnouncement(announcements, announcement);
     }
 
+    @Test
+    public void testHttpAnnouncementWithCustomProvidedProperties()
+    {
+        StaticAnnouncementHttpServerInfoImpl httpServerInfo = new StaticAnnouncementHttpServerInfoImpl(
+                URI.create("http://127.0.0.1:4444"),
+                URI.create("http://example.com:4444"),
+                URI.create("https://127.0.0.1:4444"),
+                URI.create("https://example.com:4444"));
+        String randomValue = UUID.randomUUID().toString();
+
+        Injector injector = Guice.createInjector(
+                new TestingDiscoveryModule(),
+                binder -> {
+                    binder.bind(AnnouncementHttpServerInfo.class).toInstance(httpServerInfo);
+                    discoveryBinder(binder).bindHttpAnnouncement("apple")
+                            .addProperty("instance-property", "my-instance")
+                            .bindPropertyProvider("provided-by-instance", () -> "provided-constant: " + randomValue)
+                            .bindPropertyProvider("provided-by-injected", StringPropertyProvider.class);
+                });
+
+        Set<ServiceAnnouncement> announcements = injector.getInstance(new Key<>() {});
+        assertAnnouncement(announcements, serviceAnnouncement("apple")
+                .addProperty("instance-property", "my-instance")
+                .addProperty("provided-by-instance", "provided-constant: " + randomValue)
+                .addProperty("provided-by-injected", "concatenated: http://127.0.0.1:4444 https://127.0.0.1:4444")
+                .addProperty("http", "http://127.0.0.1:4444")
+                .addProperty("http-external", "http://example.com:4444")
+                .addProperty("https", "https://127.0.0.1:4444")
+                .addProperty("https-external", "https://example.com:4444")
+                .build());
+    }
+
     private void assertAnnouncement(Set<ServiceAnnouncement> actualAnnouncements, ServiceAnnouncement expected)
     {
         assertNotNull(actualAnnouncements);
@@ -149,5 +184,23 @@ public class TestHttpAnnouncementBinder
         ServiceAnnouncement announcement = actualAnnouncements.stream().collect(onlyElement());
         assertEquals(announcement.getType(), expected.getType());
         assertEquals(announcement.getProperties(), expected.getProperties());
+    }
+
+    public static class StringPropertyProvider
+            implements Provider<String>
+    {
+        private final AnnouncementHttpServerInfo httpServerInfo;
+
+        @Inject
+        public StringPropertyProvider(AnnouncementHttpServerInfo httpServerInfo)
+        {
+            this.httpServerInfo = httpServerInfo;
+        }
+
+        @Override
+        public String get()
+        {
+            return "concatenated: %s %s".formatted(httpServerInfo.getHttpUri(), httpServerInfo.getHttpsUri());
+        }
     }
 }
